<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="249dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:background="#DF6969"
            android:fontFamily="monospace"
            android:rotation="0"
            android:text="@string/mi_perfil_personal"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewFotoAvatar"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewFotoAvatar"
            android:layout_width="74dp"
            android:layout_height="76dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fotodeperfil" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="97dp"
            android:layout_height="26dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="#000000"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextNombre"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <TextView
            android:id="@+id/textViewApellido"
            android:layout_width="97dp"
            android:layout_height="26dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="#000000"
            android:text="@string/apellido"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextApellido"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />


        <EditText
            android:id="@+id/editTextCorreoElectronico"
            android:layout_width="220dp"
            android:layout_height="39dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="225dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="225dp"
            android:layout_height="39dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <TextView
            android:id="@+id/textViewCorreoElectronico"
            android:layout_width="103dp"
            android:layout_height="38dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            android:background="#000000"
            android:text="@string/correo_electronico"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApellido" />

        <TextView
            android:id="@+id/textViewGenero"
            android:layout_width="186dp"
            android:layout_height="30dp"
            android:layout_marginTop="52dp"
            android:background="#000000"
            android:text="@string/seleccione_genero"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCorreoElectronico" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="139dp"
            android:layout_height="146dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenero">

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/radioButtonFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/radioButtonOtro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otro" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewPais"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:layout_marginTop="52dp"
            android:background="#000000"
            android:text="@string/pais"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Spinner
            android:id="@+id/spinnerPais"
            android:layout_width="332dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPais" />

        <TextView
            android:id="@+id/textViewHobbies"
            android:layout_width="177dp"
            android:layout_height="31dp"
            android:layout_marginTop="52dp"
            android:background="#000000"
            android:text="@string/intereses"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPais" />

        <CheckBox
            android:id="@+id/checkBoxLectura"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="24dp"
            android:text="@string/lectura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHobbies" />

        <CheckBox
            android:id="@+id/checkBoxDeporte"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="84dp"
            android:text="@string/deporte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHobbies" />

        <CheckBox
            android:id="@+id/checkBoxMusica"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:text="@string/musica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLectura" />

        <CheckBox
            android:id="@+id/checkBoxArte"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="84dp"
            android:text="@string/arte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxDeporte" />

        <TextView
            android:id="@+id/textViewSatisfaccion"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:background="#000000"
            android:text="@string/nivel_de_satisfaccion"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxArte" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="2dp"
            android:max="10"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toEndOf="@+id/textViewSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/textViewSatisfaccion" />

        <TextView
            android:id="@+id/textViewSeekBar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSatisfaccion" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:text="10"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSatisfaccion" />

        <Switch
            android:id="@+id/Suscripcion"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:background="#000000"
            android:text="@string/suscripcion_al_boletin"
            android:textAlignment="center"
            android:textColor="#D66767"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNivelSatisfaccion"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="249dp"
            android:layout_height="42dp"
            android:layout_marginTop="68dp"
            android:background="#E00000"
            android:text="@string/enviar"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Suscripcion" />

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="428dp"
            android:layout_height="242dp"
            android:layout_marginTop="48dp"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEnviar" />

        <TextView
            android:id="@+id/textViewNivelSatisfaccion"
            android:layout_width="220dp"
            android:layout_height="22dp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>